[package]
name = "rust-review"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.1"
crossbeam-channel = "0.3.9"
lazy_static = "1.4.0"
rayon = "1.5.2"
rand = "0.8.5"
ring = "0.16.9"
data-encoding = "2.3.2"

